--- a/src/pages/HomeScreen.css
+++ b/src/pages/HomeScreen.css
@@ -25,11 +25,30 @@ p{
   background-color: red;
   color: white;
     margin-left: 2rem;
-    margin-top: 3rem;
     height: 40px;
-
   border: none;
    padding: 8px 16px;
   border-radius: 4px;
   cursor: pointer;
+}
+.sidebaricons_title2 {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+   padding-left: 2rem;
+   margin-top: 1rem;
+}
+
+.icon_image2 {
+  width: 34px;
+  height: 34px;
+ 
+  margin-right: 10px;
+  background-color: red;
+  border-radius: 50%;
+}
+
+.sidebar_title2 {
+  font-size: 26px;
+  color: white;
 }
