--- a/src/pages/HomeScreen.css
+++ b/src/pages/HomeScreen.css
@@ -1,12 +1,12 @@
 
 .background{
 position: absolute;
-width: 100vw;
+width: 100%;
 height: 100vh;
 background-size: cover;
 background-repeat: no-repeat;
 background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpxmR0XDQ_KrV46eZInoOkIc0X8UgyBSDLAFYQS6yk9A&s');
-padding-bottom: -15rem;
+
 
 }
 
@@ -42,7 +42,6 @@ p{
 .icon_image2 {
   width: 34px;
   height: 34px;
- 
   margin-right: 10px;
   background-color: red;
   border-radius: 50%;
